Calculate glyph overflow when computing overflow outside of layout

Compute glyph overflow on the fly when we don't have it from a layout
pass. This ensures any glyph overflow is properly invalidated when we're
doing an overflow-only recalc after a style change.

BUG=667245

Review-Url: https://codereview.chromium.org/2688413002
Cr-Commit-Position: refs/heads/master@{#453087}

Former-commit-id: 38feb8be2c217b36fd46b228a69e31337fffe67e